--- a/spotfy/style.css
+++ b/spotfy/style.css
@@ -213,3 +213,12 @@ h1{
     cursor: pointer;
 }
 
+
+::-webkit-scrollbar-thumb{
+	background: linear-gradient(transparent, #30ff00);
+}
+
+
+::-webkit-scrollbar-thumb:hover{
+	background: linear-gradient(transparent, #00c6ff);
+}
