--- a/spotfy/style.css
+++ b/spotfy/style.css
@@ -214,11 +214,19 @@ h1{
 }
 
 
+::-webkit-scrollbar{
+    width: 10px;
+    background: black;
+    border: 10px;
+}
+
 ::-webkit-scrollbar-thumb{
 	background: linear-gradient(transparent, #30ff00);
+    border-radius: 100px;
 }
 
 
 ::-webkit-scrollbar-thumb:hover{
 	background: linear-gradient(transparent, #00c6ff);
+    transition: 2s;
 }
